<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/user_thumbnial_imageView"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.051"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.214"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/user_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/first_name_text_value"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@+id/user_thumbnial_imageView"
                app:layout_constraintTop_toTopOf="@+id/user_thumbnial_imageView" />

            <TextView
                android:id="@+id/user_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/last_name_text_value"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/user_first_name"
                app:layout_constraintStart_toEndOf="@+id/user_first_name"
                app:layout_constraintTop_toTopOf="@+id/user_first_name" />

            <TextView
                android:id="@+id/user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/email_text_value"
                android:textColor="@color/gray_dark_color"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/user_first_name"
                app:layout_constraintTop_toBottomOf="@+id/user_first_name" />

            <TextView
                android:id="@+id/country_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country_text_value"
                android:textColor="@color/text_color"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/user_email"
                app:layout_constraintTop_toBottomOf="@+id/user_email" />

            <TextView
                android:id="@+id/user_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/county_text_value_"
                android:textColor="@color/text_color"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@+id/country_text_view"
                app:layout_constraintStart_toEndOf="@+id/country_text_view"
                app:layout_constraintTop_toTopOf="@+id/country_text_view" />

            <TextView
                android:id="@+id/user_registration_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/date_text_value"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/user_arrow_right"
                app:layout_constraintEnd_toStartOf="@+id/user_arrow_right"
                app:layout_constraintTop_toTopOf="@+id/user_arrow_right" />

            <ImageView
                android:id="@+id/user_arrow_right"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_arrow_right"
                tools:layout_editor_absoluteY="15dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>