<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.details.UserDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_user_details"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/toolbar_bg_color"
            app:layout_scrollFlags="scroll|enterAlways">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:textColor="@color/text_color"
                    android:id="@+id/user_first_name_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/first_name_text_value"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.27"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:textColor="@color/text_color"
                    android:id="@+id/user_last_name_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@string/first_name_text_value"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/user_first_name_details"
                    app:layout_constraintTop_toTopOf="@+id/user_first_name_details" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/user_details_imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="@+id/appBarLayout"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/email_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:text="Email: "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/email_text_view_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/email_text_value"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/email_text_view_details"
        app:layout_constraintStart_toEndOf="@+id/email_text_view_details"
        app:layout_constraintTop_toTopOf="@+id/email_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/date_joined_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Date Joined:"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/email_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/email_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/date_joined_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:textStyle="bold"
        android:text="@string/date_text_value"
        app:layout_constraintBottom_toBottomOf="@+id/date_joined_text_value"
        app:layout_constraintStart_toEndOf="@+id/date_joined_text_value"
        app:layout_constraintTop_toTopOf="@+id/date_joined_text_value" />


    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/date_of_birth_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="DOB: "
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/date_joined_text_value"
        app:layout_constraintTop_toBottomOf="@+id/date_joined_text_value" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/date_text_value"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/date_of_birth_text_value"
        app:layout_constraintStart_toEndOf="@+id/date_of_birth_text_value"
        app:layout_constraintTop_toTopOf="@+id/date_of_birth_text_value" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/location_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:text="Location"
        app:layout_constraintStart_toStartOf="@+id/date_of_birth_text_value"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth_text_value" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/city_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="city:"
        app:layout_constraintStart_toStartOf="@+id/location_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/location_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/city_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/county_text_value_"
        app:layout_constraintBottom_toBottomOf="@+id/city_text_view_details"
        app:layout_constraintStart_toEndOf="@+id/city_text_view_details"
        app:layout_constraintTop_toTopOf="@+id/city_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/state_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="state:"
        app:layout_constraintStart_toStartOf="@+id/city_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/city_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/state_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/county_text_value_"
        app:layout_constraintBottom_toBottomOf="@+id/state_text_view_details"
        app:layout_constraintStart_toEndOf="@+id/state_text_view_details"
        app:layout_constraintTop_toTopOf="@+id/state_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/country_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="country:"
        app:layout_constraintStart_toStartOf="@+id/state_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/state_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/country_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/county_text_value_"
        app:layout_constraintBottom_toBottomOf="@+id/country_text_view_details"
        app:layout_constraintStart_toEndOf="@+id/country_text_view_details"
        app:layout_constraintTop_toTopOf="@+id/country_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/post_code_text_view_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="postcode:"
        app:layout_constraintStart_toStartOf="@+id/country_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/country_text_view_details" />

    <TextView
        android:textColor="@color/text_color"
        android:id="@+id/post_code_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/county_text_value_"
        app:layout_constraintBottom_toBottomOf="@+id/post_code_text_view_details"
        app:layout_constraintStart_toEndOf="@+id/post_code_text_view_details"
        app:layout_constraintTop_toTopOf="@+id/post_code_text_view_details" />

    <View
        android:id="@+id/view"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/user_details_imageView"
        app:layout_constraintStart_toStartOf="@+id/user_details_imageView"
        app:layout_constraintTop_toBottomOf="@+id/user_details_imageView" />

    <View
        android:id="@+id/view2"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:background="@color/black"
        app:layout_constraintStart_toStartOf="@+id/location_text_view_details"
        app:layout_constraintTop_toBottomOf="@+id/location_text_view_details" />


</androidx.constraintlayout.widget.ConstraintLayout>